adding memory management to websurfer

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Core agent framework
 smolagents[toolkit]>=0.1.0
 
+smolagents[openai]>=0.1.0
+
 # Browser automation
 playwright>=1.40.0
 
@@ -25,3 +27,6 @@ loguru>=0.7.0
 
 # Type hints
 typing-extensions>=4.0.0
+
+
+markitdown>=0.1.0
