--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ smolagents[toolkit]>=0.1.0
 
 smolagents[openai]>=0.1.0
 
+# Environment variables
+python-dotenv>=1.0.0
+
 # Browser automation
 playwright>=1.40.0
 
@@ -33,3 +36,5 @@ markitdown>=0.1.0
 
 markitdown[all]>=0.1.0
 
+
+wikipedia-api>=0.1.0
