Update .gitignore to exclude large dataset files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.venv
+venv/
 __pycache__/
 *.pyc
 *.pyo
@@ -10,3 +10,8 @@ build/
 .env
 logs/
 simrag_training_data.jsonl
+
+# Large dataset files
+Amazon M2 Archive/task1/persona_dataset.csv
+Amazon M2 Archive/task1/sessions_test_task1_phase*.csv
+Amazon M2 Archive/task1/gt_task1_phase*.csv
